# kandinsky

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt
doc/doxy/: CMakeLists.txt  Doxyfile.cmake
src/: CMakeLists.txt
src/Kandinsky/: CMakeLists.txt  Kandinsky.hpp
src/Kandinsky/expressions/: AbsExpression.cpp  AbsExpression.hpp  AbsExpression.tpp  AdditionExpression.cpp  AdditionExpression.hpp  AdditionExpression.tpp  ArcCosineExpression.cpp  ArcCosineExpression.hpp  ArcCosineExpression.tpp  ArcSineExpression.cpp  ArcSineExpression.hpp  ArcSineExpression.tpp  ArcTangentExpression.cpp  ArcTangentExpression.hpp  ArcTangentExpression.tpp  BaseExpression.cpp  BaseExpression.hpp  BaseExpression.tpp  BinaryExpression.hpp  CMakeLists.txt  Constant.cpp  Constant.hpp  Constant.tpp  CosineExpression.cpp  CosineExpression.hpp  CosineExpression.tpp  DivisionExpression.cpp  DivisionExpression.hpp  DivisionExpression.tpp  ErfExpression.cpp  ErfExpression.hpp  ExponentialExpression.cpp  ExponentialExpression.hpp  ExponentialExpression.tpp  Expression.cpp  Expression.hpp  Expression.tpp  ExpressionTraits.hpp  IfThenElseExpression.cpp  IfThenElseExpression.hpp  (+36 more)
src/Kandinsky/expressions/comparison/: CMakeLists.txt  EqualExpression.cpp  EqualExpression.hpp  GreaterEqualExpression.cpp  GreaterEqualExpression.hpp  GreaterExpression.cpp  GreaterExpression.hpp  LessEqualExpression.cpp  LessEqualExpression.hpp  LessExpression.cpp  LessExpression.hpp  NotEqualExpression.cpp  NotEqualExpression.hpp
src/Kandinsky/expressions/logical/: AndExpression.cpp  AndExpression.hpp  CMakeLists.txt  NotExpression.cpp  NotExpression.hpp  OrExpression.cpp  OrExpression.hpp
src/Kandinsky/utils/: CMakeLists.txt  assertOrExit.hpp
src/test/expressions/: AbsEvaluationTest.cpp  AdditionEvaluationTest.cpp  CMakeLists.txt  ConstantEvaluationTest.cpp  CosineEvaluationTest.cpp  ExpressionDerivativesTest.cpp  ExpressionPrintingTest.cpp  MultiplicationEvaluationTest.cpp  SineEvaluationTest.cpp  SquareRootEvaluationTest.cpp  TangentEvaluationTest.cpp
src/test/expressions/differentiation/: AbsDifferentiationTest.cpp  AdditionDifferentiationTest.cpp  ArcCosineDifferentiationTest.cpp  ArcSineDifferentiationTest.cpp  ArcTangentDifferentiationTest.cpp  CMakeLists.txt  ConstantDifferentiationTest.cpp  CosineDifferentiationTest.cpp  DivisionDifferentiationTest.cpp  ErfDifferentiationTest.cpp  ExponentialDifferentiationTest.cpp  IfThenElseDifferentiationTest.cpp  MinusDifferentiationTest.cpp  MultiplicationDifferentiationTest.cpp  NaturalLogarithmDifferentiationTest.cpp  PowerDifferentiationTest.cpp  SignDifferentiationTest.cpp  SineDifferentiationTest.cpp  SquareRootDifferentiationTest.cpp  SubtractionDifferentiationTest.cpp  TangentDifferentiationTest.cpp  VariableDifferentiationTest.cpp
src/test/expressions/evaluation/: AdditionEvaluationTest.cpp  ArcCosineEvaluationTest.cpp  ArcSineEvaluationTest.cpp  ArcTangentEvaluationTest.cpp  CMakeLists.txt  CompositeEvaluationTest.cpp  DivisionEvaluationTest.cpp  ErfEvaluationTest.cpp  ExponentialEvaluationTest.cpp  IfThenElseEvaluationTest.cpp  MultiplicationEvaluationTest.cpp  NaturalLogarithmEvaluationTest.cpp  PowerEvaluationTest.cpp  SquareRootEvaluationTest.cpp  SubtractionEvaluationTest.cpp  VariableEvaluationTest.cpp
src/test/expressions/evaluation/comparison/: CMakeLists.txt  EqualEvaluationTest.cpp  GreaterEqualEvaluationTest.cpp  GreaterEvaluationTest.cpp  LessEqualEvaluationTest.cpp  LessEvaluationTest.cpp  NotEqualEvaluationTest.cpp
src/test/expressions/evaluation/logical/: AndEvaluationTest.cpp  CMakeLists.txt  NotEvaluationTest.cpp  OrEvaluationTest.cpp
